--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,19 @@
 @font-face {
-  font-family: "Pretendard Variable";
+  font-family: "Pretendard";
   font-weight: 45 920;
   font-style: normal;
   font-display: swap;
   src: local("Pretendard Variable"),
     url("/fonts/Pretendard.woff2") format("woff2-variations");
+}
+
+@font-face {
+  font-family: "Raleway";
+  font-weight: 100 900;
+  font-style: normal;
+  font-display: swap;
+  src: local("Raleway Variable"),
+    url("/fonts/Raleway-VariableFont_wght.ttf") format("woff2-variations");
 }
 
 @tailwind base;
@@ -14,5 +23,27 @@
 @layer base {
   body {
     @apply font-sans text-text-dark dark:text-text-lighter text-base;
+  }
+  h1 {
+    @apply text-2xl;
+  }
+  h2 {
+    @apply text-lg;
+  }
+  h3 {
+    @apply text-xs;
+  }
+  h4 {
+  }
+  time {
+    @apply text-xs;
+  }
+}
+@layer components {
+  .lg-text {
+    @apply text-lg;
+  }
+  .lg-text-bold {
+    @apply lg-text font-bold;
   }
 }
