--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,7 +18,7 @@
 
 @font-face {
   font-family: "KBIZHanmaumGothic";
-  src: url("/font/KBIZHanmaumGothic-medium.ttf");
+  src: url("/fonts/KBIZHanmaumGothic-medium.ttf");
   font-style: normal;
 }
 
@@ -31,26 +31,51 @@
     @apply font-sans text-text-dark dark:text-text-lighter text-base;
   }
   h1 {
-    @apply text-2xl;
+    @apply text-3xl;
   }
   h2 {
     @apply text-lg leading-6;
   }
   h3 {
-    @apply text-xs uppercase;
+    @apply text-sm uppercase;
   }
   h4 {
     @apply font-sub text-xs uppercase font-light text-primary-light;
   }
   time {
-    @apply font-sub text-[11px] uppercase text-text-light font-light;
+    @apply font-sub text-xs uppercase text-text-light font-light;
   }
 }
 @layer components {
+  .xl-text {
+    @apply text-xl;
+  }
   .lg-text {
     @apply text-lg;
   }
   .lg-text-bold {
     @apply lg-text font-bold;
+  }
+
+  .btn {
+    @apply rounded-lg px-3 py-2 cursor-pointer border-2;
+  }
+  .btn--orange {
+    @apply border-yellow-600  text-yellow-400  hover:bg-yellow-600 hover:text-yellow-200;
+  }
+  .btn--blue {
+    @apply border-blue-600 text-blue-400 hover:bg-blue-600 hover:text-blue-200;
+  }
+  .btn--green {
+    @apply border-green-600  text-green-400  hover:bg-green-600 hover:text-green-200;
+  }
+  .btn--purple {
+    @apply border-purple-600  text-purple-400  hover:bg-purple-600 hover:text-purple-200;
+  }
+  .btn--red {
+    @apply border-red-600  text-red-400  hover:bg-red-600 hover:text-red-200;
+  }
+  .btn--gray {
+    @apply border-gray-800  text-gray-400  hover:bg-gray-800 hover:text-gray-200;
   }
 }
