--- a/styles/globals.css
+++ b/styles/globals.css
@@ -45,6 +45,9 @@
   time {
     @apply font-sub text-xs uppercase text-text-light font-light;
   }
+  p {
+    @apply leading-10;
+  }
 }
 @layer components {
   .xl-text {
@@ -64,7 +67,7 @@
     @apply border-yellow-600  text-yellow-400  hover:bg-yellow-600 hover:text-yellow-200;
   }
   .btn--blue {
-    @apply border-blue-600 text-blue-400 hover:bg-blue-600 hover:text-blue-200;
+    @apply border-sky-600 text-sky-400 hover:bg-sky-600 hover:text-sky-200;
   }
   .btn--green {
     @apply border-green-600  text-green-400  hover:bg-green-600 hover:text-green-200;
@@ -73,7 +76,7 @@
     @apply border-purple-600  text-purple-400  hover:bg-purple-600 hover:text-purple-200;
   }
   .btn--red {
-    @apply border-red-600  text-red-400  hover:bg-red-600 hover:text-red-200;
+    @apply border-rose-400  text-rose-300  hover:bg-rose-700 hover:text-rose-200;
   }
   .btn--gray {
     @apply border-gray-800  text-gray-400  hover:bg-gray-800 hover:text-gray-200;
